--- a/Psychic Game.html
+++ b/Psychic Game.html
@@ -19,19 +19,14 @@
 
 	<div id="game" class="main-container">
 		<h2><strong>Guess what letter I'm thinking of!</strong></h2>
-		<h3>Your guesses so far: </h3>
+		<h3>Wins: 0</h3>
+		<h3>Losses: 0</h3>
 		<h3>Guesses left: 9</h3>
+		<h3>Your guesses so far:</h3>
+	</div>
 
-		<div id="game" class="main-container">
-			<h3>Wins: 0</h3>
-			<h3>Losses: 0</h3>
-		</div>
+	<h4>Refresh page to restart game...</h4>
 
-		<footer>
-			<div class="container">
-				Copyright &copy; 2019 Steven M Stott
-			</div>
-		</footer>
 
 </body>
 
